welcome.lessons.welcome.instructions.Instructions.scala.error
Program:1: error: not found: value baissebrosse
baissebrosse();avance();avance();droite();avance();avance();droite();avance();avance();droite();avance();droite();levebrosse();avance();
^Program:1: error: not found: value levebrosse
baissebrosse();avance();avance();droite();avance();avance();droite();avance();avance();droite();avance();droite();levebrosse();avance();
                                                                                                                  ^